Update December 2025 weblog entry with sources
Added sources and corrected formatting in December 2025 entry.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -35,16 +35,20 @@ These follow regular Swedish compounding rules:
 
 Sources: 
 
----
+* https://www.hhogman.se/christmas-in-sweden.htm
+* https://en.wikipedia.org/wiki/Yule
+* https://scandinavianshoppe.com/the-julbock/
 
 If you want, I can also give you:
 
 - Old Norse forms (e.g., Jól)  
 - Proto‑Germanic reconstructions  
 - Orthographic evolution from runic inscriptions to modern Swedish  
-- Comparative forms across Danish, Norwegian, Icelandic, Faroese, Gothic, Old English, and Old High German  
+- Comparative forms across Danish, Norwegian, Icelandic, Faroese, Gothic, Old English and Old High German  
 
 Just say the word and I’ll build you a proper philological table.
+
+You FORGOT bloomin' Elfdalian!
 
 ### Friday, December 19, 2025 ###
 
