--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -48,7 +48,7 @@ If you want, I can also give you:
 
 Just say the word and I’ll build you a proper philological table.
 
-You FORGOT bloomin' Elfdalian and other somesuch!
+You FORGOT bloomin' [Elfdalian](https://en.wikipedia.org/w/index.php?title=%C3%96vdalian&oldid=1322975583) and other somesuch!
 
 ### Friday, December 19, 2025 ###
 
