--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -4,6 +4,10 @@ File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_
 
 ### Saturday, December 20, 2025 ###
 
+Deix|s:
+
+* https://github.com/b9Joker108/hummingbird_homestead_-_ganachakra_kitchen/blob/main/weblog/2025/december_2025_v1_06122025.md#l%C3%B6rdag-december-19-2025--l%C3%B6rdag
+
 **What is the Swedish orthography for Yule and Christmas?**
 
 Here’s the clean, citation‑grounded answer, Beauford — and it aligns beautifully with your philological instincts.
